--- a/FontEnd/index.html
+++ b/FontEnd/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div id="APP"></div>
+<div id="APP" style="height:100%; min-height: 100%;"></div>
 <script>/*webpackBootstrap*/</script>
 <!-- build:vendor -->
 <!--<script src="/static/js/vendor.js"></script>-->
